tests/samples/negative/types/array_length_literal_overflow.ax
module array_length_literal_overflow;

fn main() -> i32 {
  return cast<i32>(sizeof<[18446744073709551616]u8>);
}
